3.5.1/_sources/gallery/lines_bars_and_markers/scatter_star_poly.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/lines_bars_and_markers/scatter_star_poly.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_gallery_lines_bars_and_markers_scatter_star_poly.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_lines_bars_and_markers_scatter_star_poly.py:


===============
Marker examples
===============

Example with different ways to specify markers.

For a list of all markers see also the `matplotlib.markers` documentation.

.. GENERATED FROM PYTHON SOURCE LINES 10-49



.. image-sg:: /gallery/lines_bars_and_markers/images/sphx_glr_scatter_star_poly_001.png
   :alt: marker='>', marker=r'\$\alpha\$', marker=verts, marker=(5, 0), marker=(5, 1), marker=(5, 2)
   :srcset: /gallery/lines_bars_and_markers/images/sphx_glr_scatter_star_poly_001.png, /gallery/lines_bars_and_markers/images/sphx_glr_scatter_star_poly_001_2_0x.png 2.0x
   :class: sphx-glr-single-img





.. code-block:: default

    import numpy as np
    import matplotlib.pyplot as plt

    # Fixing random state for reproducibility
    np.random.seed(19680801)

    x = np.random.rand(10)
    y = np.random.rand(10)
    z = np.sqrt(x**2 + y**2)

    fig, axs = plt.subplots(2, 3, sharex=True, sharey=True)

    # marker symbol
    axs[0, 0].scatter(x, y, s=80, c=z, marker=">")
    axs[0, 0].set_title("marker='>'")

    # marker from TeX
    axs[0, 1].scatter(x, y, s=80, c=z, marker=r'$\alpha$')
    axs[0, 1].set_title(r"marker=r'\$\alpha\$'")

    # marker from path
    verts = [[-1, -1], [1, -1], [1, 1], [-1, -1]]
    axs[0, 2].scatter(x, y, s=80, c=z, marker=verts)
    axs[0, 2].set_title("marker=verts")

    # regular polygon marker
    axs[1, 0].scatter(x, y, s=80, c=z, marker=(5, 0))
    axs[1, 0].set_title("marker=(5, 0)")

    # regular star marker
    axs[1, 1].scatter(x, y, s=80, c=z, marker=(5, 1))
    axs[1, 1].set_title("marker=(5, 1)")

    # regular asterisk marker
    axs[1, 2].scatter(x, y, s=80, c=z, marker=(5, 2))
    axs[1, 2].set_title("marker=(5, 2)")

    plt.tight_layout()
    plt.show()


.. _sphx_glr_download_gallery_lines_bars_and_markers_scatter_star_poly.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: scatter_star_poly.py <scatter_star_poly.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: scatter_star_poly.ipynb <scatter_star_poly.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    Keywords: matplotlib code example, codex, python plot, pyplot
    `Gallery generated by Sphinx-Gallery
    <https://sphinx-gallery.readthedocs.io>`_
